提交：员工管理，协议客户，菜单角色
