# guest-employee/WebContent/swagger.json
@@ -14,7 +14,7 @@
       "url" : "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "host" : "localhost:8080",
+  "host" : "localhost:8081",
   "tags" : [ {
     "name" : "Employee"
   }, {
@@ -22,7 +22,7 @@
   } ],
   "schemes" : [ "http" ],
   "paths" : {
-    "/guest-employee/delete" : {
+    "/delete" : {
       "post" : {
         "tags" : [ "Employee" ],
         "summary" : "员工管理 - 删除",
@@ -53,7 +53,42 @@
         }
       }
     },
-    "/guest-employee/list" : {
+    "/getRoleByUserId" : {
+      "get" : {
+        "tags" : [ "Employee" ],
+        "summary" : "员工管理 - 根据id查询员工 ",
+        "description" : "返回合同详情",
+        "operationId" : "getRoleByUserId",
+        "produces" : [ "application/json;charset=utf8" ],
+        "parameters" : [ {
+          "name" : "employeeId",
+          "in" : "query",
+          "required" : false,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "airportCode",
+          "in" : "query",
+          "required" : false,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "请求成功",
+            "schema" : {
+              "type" : "string"
+            }
+          },
+          "400" : {
+            "description" : "参数错误"
+          },
+          "405" : {
+            "description" : "请求方式不对"
+          }
+        }
+      }
+    },
+    "/list" : {
       "get" : {
         "tags" : [ "Employee" ],
         "summary" : "员工列表 - 分页查询",
@@ -84,18 +119,30 @@
           "in" : "query",
           "required" : false,
           "type" : "string"
+        }, {
+          "name" : "airportCode",
+          "in" : "query",
+          "description" : "机场编号",
+          "required" : true,
+          "type" : "String"
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation",
+            "description" : "请求成功",
             "schema" : {
-              "type" : "string"
+              "$ref" : "#/definitions/Employee"
             }
+          },
+          "400" : {
+            "description" : "参数错误"
+          },
+          "405" : {
+            "description" : "请求方式不对"
           }
         }
       }
     },
-    "/guest-employee/queryEmployeeDropdownList" : {
+    "/queryEmployeeDropdownList" : {
       "get" : {
         "tags" : [ "common:公共接口" ],
         "summary" : "系统中用到员工信息下来框，只包含id，和value的对象",
@@ -112,13 +159,13 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/响应结果"
+              "type" : "string"
             }
           }
         }
       }
     },
-    "/guest-employee/saveOrUpdate" : {
+    "/saveOrUpdate" : {
       "post" : {
         "tags" : [ "Employee" ],
         "summary" : "员工管理 - 新增/修改",
@@ -139,13 +186,13 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/响应结果"
+              "type" : "string"
             }
           }
         }
       }
     },
-    "/guest-employee/view" : {
+    "/view" : {
       "get" : {
         "tags" : [ "Employee" ],
         "summary" : "员工管理 - 根据id查询员工 ",
@@ -153,7 +200,7 @@
         "operationId" : "view",
         "produces" : [ "application/json;charset=utf8" ],
         "parameters" : [ {
-          "name" : "id",
+          "name" : "employeeId",
           "in" : "query",
           "required" : false,
           "type" : "integer",
@@ -163,25 +210,19 @@
           "in" : "query",
           "required" : false,
           "type" : "string"
-        }, {
-          "name" : "id",
-          "in" : "query",
-          "description" : "员工id",
-          "required" : true,
-          "type" : "Long"
-        }, {
-          "name" : "airportCode",
-          "in" : "query",
-          "description" : "机场编号",
-          "required" : true,
-          "type" : "String"
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation",
+            "description" : "请求成功",
             "schema" : {
-              "type" : "string"
+              "$ref" : "#/definitions/Employee"
             }
+          },
+          "400" : {
+            "description" : "参数错误"
+          },
+          "405" : {
+            "description" : "请求方式不对"
           }
         }
       }
@@ -190,13 +231,8 @@
   "definitions" : {
     "Employee" : {
       "type" : "object",
-      "required" : [ "airportCode", "id", "name", "password" ],
+      "required" : [ "airportCode", "name", "password" ],
       "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64",
-          "description" : "主键自增id"
-        },
         "createTime" : {
           "type" : "string",
           "format" : "date-time",
@@ -216,6 +252,21 @@
           "type" : "string",
           "description" : "机场code"
         },
+        "createUser" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "创建人"
+        },
+        "updateUser" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "修改人"
+        },
+        "employeeId" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "employeeId"
+        },
         "account" : {
           "type" : "string",
           "description" : "账号"
@@ -232,6 +283,19 @@
           "type" : "integer",
           "format" : "int32",
           "description" : "性别：0：男，1：女"
+        },
+        "roleIdList" : {
+          "type" : "array",
+          "description" : "角色id集合",
+          "items" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        },
+        "isExist" : {
+          "type" : "integer",
+          "format" : "int32",
+          "description" : "判断新增的记录是否存在：0：新增，1：修改"
         }
       },
       "description" : "employee"
@@ -262,26 +326,6 @@
         }
       },
       "description" : "全局统一接受参数"
-    },
-    "响应结果" : {
-      "type" : "object",
-      "required" : [ "msg", "status" ],
-      "properties" : {
-        "status" : {
-          "type" : "integer",
-          "format" : "int32",
-          "description" : "响应状态码"
-        },
-        "msg" : {
-          "type" : "string",
-          "description" : "响应消息"
-        },
-        "data" : {
-          "type" : "object",
-          "description" : "响应数据"
-        }
-      },
-      "description" : "响应结果"
     }
   }
 }
